--- a/package.json
+++ b/package.json
@@ -532,6 +532,7 @@
     "nanoid": "^3.3.2",
     "nanomatch": "^1.2.13",
     "napi-build-utils": "^1.0.2",
+    "navigo": "^8.11.1",
     "negotiator": "^0.6.3",
     "neo-async": "^2.6.2",
     "next-tick": "^1.1.0",
